` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/TimerStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title Timer State Transitions

[*] --> CREATED
CANCEL_TIMER_COMMAND_CREATED --> CANCEL_TIMER_COMMAND_CREATED: CANCEL
CANCEL_TIMER_COMMAND_CREATED --> CANCEL_TIMER_COMMAND_SENT: CANCEL_TIMER
CANCEL_TIMER_COMMAND_SENT --> CANCELED: TIMER_CANCELED
CREATED --> START_COMMAND_CREATED: SCHEDULE
START_COMMAND_CREATED --> START_COMMAND_CREATED: START_TIMER
START_COMMAND_CREATED --> START_COMMAND_RECORDED: TIMER_STARTED
START_COMMAND_CREATED --> CANCELED: CANCEL
START_COMMAND_RECORDED --> FIRED: TIMER_FIRED
START_COMMAND_RECORDED --> CANCEL_TIMER_COMMAND_CREATED: CANCEL
FIRED --> [*]
CANCELED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
